--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <!-- Fim do Pixel -->
   <script>
     setTimeout(function() {
-      window.location.href = 'https://t.me/estterprivvbot?start=start';
+      window.location.href = 'https://t.me/+iZNK_sca66AwZGIx';
     }, 800);
   </script>
 </head>
