--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Redirecionando...</title>
+
   <!-- Pixel do Facebook -->
   <script>
     !function(f,b,e,v,n,t,s)
@@ -22,13 +23,18 @@
     src="https://www.facebook.com/tr?id=2189359868146902&ev=Lead&noscript=1"/>
   </noscript>
   <!-- Fim do Pixel -->
+
+  <!-- Redirecionamento automático -->
   <script>
     setTimeout(function() {
-      window.location.href = 'https://t.me/+iZNK_sca66AwZGIx';
+      window.location.href = 'https://lunarbot.com.br/announce/280';
     }, 800);
   </script>
 </head>
 <body>
   <p>Redirecionando você para o conteúdo exclusivo...</p>
+
+  <!-- Script de rastreamento do LunarBot -->
+  <script src="https://lunarbot.com.br/js/lunarbot-tracking.min.js"></script>
 </body>
 </html>
