--- a/index.html
+++ b/index.html
@@ -1,40 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <title>Redirecionando...</title>
-
-  <!-- Pixel do Facebook -->
-  <script>
-    !function(f,b,e,v,n,t,s)
-    {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-    n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-    if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-    n.queue=[];t=b.createElement(e);t.async=!0;
-    t.src=v;s=b.getElementsByTagName(e)[0];
-    s.parentNode.insertBefore(t,s)}(window, document,'script',
-    'https://connect.facebook.net/en_US/fbevents.js');
-    
-    fbq('init', '2189359868146902'); // ID do pixel
-    fbq('track', 'Lead'); // Evento Lead
-  </script>
-  <noscript>
-    <img height="1" width="1" style="display:none" 
-    src="https://www.facebook.com/tr?id=2189359868146902&ev=Lead&noscript=1"/>
-  </noscript>
-  <!-- Fim do Pixel -->
-
-  <!-- Redirecionamento automático -->
-  <script>
-    setTimeout(function() {
-      window.location.href = 'https://lunarbot.com.br/announce/280';
-    }, 800);
-  </script>
+  <meta charset="utf-8" />
+  <meta http-equiv="refresh" content="0;url=https://t.me/+vEeBqvoRJ3M2YTEx" />
+  <title>Redirecionando…</title>
 </head>
 <body>
-  <p>Redirecionando você para o conteúdo exclusivo...</p>
-
-  <!-- Script de rastreamento do LunarBot -->
-  <script src="https://lunarbot.com.br/js/lunarbot-tracking.min.js"></script>
+  <p>Se não for redirecionado automaticamente, <a href="https://t.me/+vEeBqvoRJ3M2YTEx">clique aqui</a>.</p>
+  <script>
+    // fallback imediato por JS
+    window.location.replace("https://t.me/+vEeBqvoRJ3M2YTEx");
+  </script>
 </body>
 </html>
